--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,9 +10,9 @@
     <body>
         {% if user.is_authenticated %}
         <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+        <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
         {% endif %}
         <div class="page-header">
-
             <h1><a href="/">Django Girls Blog</a></h1>
         </div>
         <div class="content container">
